# ev

./: baby_reconstruction.py  data.py  event_camera_pixel.py  event_generation_visualization.py  events_vs_images.py  main.py  models.py  nio.py  reconstruction.py  run_dataset_test.py  sampling.py  setup.py  speed_test.py
legacy/: data_augmentation.py  ev_prob.py  inv_eq.py
libs/: CMakeLists.txt  main.py  setup.py
libs/ev_cpp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
libs/src/: bindings.cpp
libs/src/ev_cpp.egg-info/: PKG-INFO  SOURCES.txt
minGPT/minGPT.egg-info/: PKG-INFO
plots/: num_events_vs_val.csv  num_events_vs_val.py  plot_signal_examples.py  plot_sinusoid.py
scripts/: generate_data.py  generate_path_data.py  train.py
scripts/slurm/: generate_data.sh  train_ev.sh
scripts/wandb/: latest-run
scripts/wandb/run-20250925_105745-8dhoktjx/: run-8dhoktjx.wandb
scripts/wandb/run-20250925_110332-qr42nb53/: run-qr42nb53.wandb
scripts/wandb/run-20250925_112508-vgpzgxu8/: run-vgpzgxu8.wandb
scripts/wandb/run-20250925_112750-8e1drp2k/: run-8e1drp2k.wandb
scripts/wandb/run-20250925_113117-c2nab5dl/: run-c2nab5dl.wandb
scripts/wandb/run-20250925_113214-6m75oekc/: run-6m75oekc.wandb
scripts/wandb/run-20250925_113911-ivk6tbpd/: run-ivk6tbpd.wandb
scripts/wandb/run-20250925_114056-tke7y2u1/: run-tke7y2u1.wandb
src/ev/: dataset.py  lie_group_utils.py  plot.py  process.py  sample.py  se3.py  so3.py  spline.py
src/ev.egg-info/: PKG-INFO  SOURCES.txt
src/ev/models/: gpt.py  network.py
test/: run_dataset_test.py  run_test.py
(+170 files in other folders)
